--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile project(path: ':library')
+//    compile 'com.suntabu.RTSAnimation:RTSAnimation:1.0.1'
 }
