--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,15 @@ buildscript {
     repositories {
         jcenter()
     }
+
+    repositories {
+        maven {
+            url 'http://192.168.31.91:8082/repository/maven-releases'//这个地址在包的页面的右方
+        }
+    }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
+        classpath 'com.android.tools.build:gradle:2.1.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +22,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+    }
+
+    repositories {
+        maven {
+            url 'http://192.168.31.91:8082/repository/maven-releases'//这个地址在包的页面的右方
+        }
     }
 }
 
