--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,22 @@
 #Sat Jun 04 21:19:05 CST 2016
 systemProp.http.proxyHost=127.0.0.1
 systemProp.http.proxyPort=1080
+
+
+MAVEN_URL= http://192.168.31.91:8082/repository
+MAVEN_SNAPSHOT_URL = http://192.168.31.91:8082/repository/maven-releases/
+#登录nexus oss的用户名
+NEXUS_USERNAME=admin
+#登录nexus oss的密码
+NEXUS_PASSWORD=admin123
+# type
+TYPE = aar
+# description
+DESCRIPTION = dependences lib
+
+# groupid
+GROUP_ID = com.suntabu.RTSAnimation
+#对应maven的groupId值
+GROUP=com.suntabu.animation
+ARTIFACT_ID=RTSAnimation
+POM_VERSION=1.0.2
